Si un joueur a des cartes de la couleur de son personnage il gagne des pièces #15